deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placewaifu
spec:
  selector:
    matchLabels:
      app: placewaifu
  template:
    metadata:
      labels:
        app: placewaifu
    spec:
      containers:
        - name: placewaifu
          image: ghcr.io/xetera/placewaifu:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 1234
